8284863: riscv: missing side effect for result in instruct vcount_positives

Reviewed-by: fyang, shade